$Id$

2015-08-17  Christian Franke  <franke@computer.org>

	scsiata.cpp: Ignore bogus SCSI sense_key if ATA status in
	SAT ATA Return Descriptor indicates success (ticket #548).

2015-08-08  Christian Franke  <franke@computer.org>

	os_win32.cpp: Fix get_os_version_str() for Windows >= 8.1.
	Add Windows 10 Final.

2015-08-02  Christian Franke  <franke@computer.org>

	configure.ac: Remove '--disable-drivedb',
	'--enable-savestates', '--enable-attributelog'.
	Print error message if used.

2015-07-15  Christian Franke  <franke@computer.org>

	autogen.sh: Drop support for automake 1.7 - 1.9.x.
	Rework search for automake-VERSION.
	configure.ac: Drop support for autoconf 2.5x.
	Drop support for automake 1.7 - 1.9.x.
	Remove --with-docdir option.

2015-06-24  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	- USB: SimpleTech 3.0 bridge (0x4971:0x8017), reported in #554

2015-06-04  Christian Franke  <franke@computer.org>

	smartmontools 6.4

2015-06-03  Christian Franke  <franke@computer.org>

	drivedb.h:
	- InnoDisk iCF 9000 CompactFlash Cards
	- SanDisk based SSDs: ReadyCache SSD
	- Seagate Barracuda 7200.14 (AF): Apple OEM
	- USB: Toshiba Canvio Basics (0x0480:0xa200)

	ataprint.cpp: Read General Purpose Log Directory only if GPL
	feature set is supported.  Improve support check of old logs
	for older drives which return empty SMART Log Directory.

2015-06-01  Christian Franke  <franke@computer.org>

	Makefile.am, smartd.8.in: Hide initscript documentation if
	initscriptdir is not configured.
	smartd.conf.5.in: Remove outdated info about default shell.

2015-05-30  Christian Franke  <franke@computer.org>

	Fixes for aacraid patch:
	aacraid.h: Fix _WIN32/_WIN64 checks.
	os_win32.cpp: Clarify copyright info in GPL header.
	Improve source code formatting.
	Fix build on Cygwin.  Fix HKEY leak.
	Fix member initialization order.
	Fix info_name and dev_type parameter order.
	Improve error handling.  Avoid unsafe sprintf().
	Remove unused variables.  Add help text.